# orchestraos

./: .clang-format  .gitignore  AGENTS.md  BUILD_ISSUE_ANALYSIS.md  BUILD_SUCCESSFUL.md  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  IMPORTANT_always_read_first.md  PREREQUISITES.md  README.md  SYSTEM_PROMPT.md  build_output.txt  cmake_output.txt  custom_print.css  jules_system_prompt.md  pdll_help.txt  research_log.md  tblgen_help.txt  temp_test.mlir  test.mlir  test_output.txt
docs/: modules.md  orchestra - PRIO - tech -  MLIR Implementation Plan Modernization.md  orchestra - PRIO - tech - Correcting MLIR Dialect CMake Build.md  readme.md  rock_no_properties.md  status quo.md
docs/adrs/: README.md
docs/architecture/: Dialect_Implementation_Guide.md  MLIR Tensor to Vector Lowering Pattern.md  blueprint.md  dialect_semantics.md  mlir-implementation-plan.md  orchestra - tech - Blueprint.md  orchestra - tech - MLIR 20 Blueprint.md  orchestra - tech - architecture - Blueprint addendum StableHLO and LLVM Compatibility.md  orchestra - tech - important Blueprint addendum.md  orchestra blueprint 1.md  orchestra blueprint 2.md
docs/fixes/: fix_task_to_properties.md  fix_transfer_to_properties.md  post_mortem_path_C_task_to_properties.md
docs/guides/: A Definitive Guide to Region Transplantation and Terminator Replacement in MLIR.md  An Engineering Guide to Modern C++ MLIR Pass Development.md  An Engineering Guide to the MLIR Verifier and Diagnostic System.md  (+31 more)
docs/guides and troubleshooting/: MLIR C++ Lowering and Pass Options.md  MLIR Pass Debugging for SpeculateAddress.md  MLIR Pass Registration Namespace Error.md  MLIR Verifier Diagnostic Issue.md
mre4/: CMakeLists.txt
mre4/include/: MyPass.h
mre4/include/Orchestra/: CMakeLists.txt  OrchestraDialect.h  OrchestraDialect.td  OrchestraOps.h  OrchestraOps.td
mre4/lib/: CMakeLists.txt  MyPass.cpp  Passes.cpp  Passes.h
mre4/lib/Orchestra/: CMakeLists.txt  OrchestraDialect.cpp  OrchestraOps.cpp
mre4/mre-opt/: CMakeLists.txt  main.cpp
next/: 01_implement_commit_verifier.md  02_lower_transfer_to_xegpu.md  03_implement_fdo_profiler_pass.md  04_MLIR Silent Parser Failure Diagnosis.md  04_fix_commit_verifier.md  Fixing the Commit Op Verifier.md  MLIR Instrumentation Pass Design.md  MLIR OrchestraOS XeGPU Lowering Review.md  MLIR Pass Enhancement and Validation.md  MLIR Pass Enhancement for Async GPU Lowering.md  MLIR Pass Implementation Review.md  MLIR TableGen Build Failure Resolution.md  MLIR Transfer Canonicalization Review.md  MLIR Transfer Op Fusion Enhancement.md  dra-task-v2.md  upgrade_plan.md
orchestra-compiler/: CMakeLists.txt  MyAddMLIR.cmake  README.md  cmake_output.txt  test_output.txt
orchestra-compiler/include/: CMakeLists.txt  README.md
orchestra-compiler/include/Orchestra/: CMakeLists.txt  Orchestra.td  OrchestraAttributes.h  OrchestraAttributes.td  OrchestraDialect.h  OrchestraDialect.td  OrchestraInterfaces.h  OrchestraInterfaces.td  OrchestraOps.h  OrchestraOps.td  OrchestraProperties.h  OrchestraProperties.td  OrchestraRegistration.h  OrchestraTarget.h  README.md
orchestra-compiler/include/Orchestra/Dialects/Rock/: CMakeLists.txt  RockDialect.h  RockDialect.td  RockOps.h  RockOps.td
orchestra-compiler/include/Orchestra/Rock/: CMakeLists.txt  Rock.td  RockDialect.h  RockDialect.td  RockOps.h  RockOps.td
orchestra-compiler/include/Orchestra/Transforms/: LowerLinalgToRock.h  LowerRockToAMDGPU.h  Passes.h  README.md  SpeculateIfOp.h
orchestra-compiler/lib/: CMakeLists.txt  README.md
orchestra-compiler/lib/Conversion/: CMakeLists.txt
orchestra-compiler/lib/Conversion/OrchestraToLLVM/: CMakeLists.txt  OrchestraToLLVM.cpp  OrchestraToLLVM.h
orchestra-compiler/lib/Orchestra/: CMakeLists.txt  OrchestraAttributes.cpp  OrchestraDialect.cpp  OrchestraInterfaces.cpp  OrchestraOps.cpp  README.md
orchestra-compiler/lib/Orchestra/Dialects/Rock/: CMakeLists.txt  RockDialect.cpp
orchestra-compiler/lib/Orchestra/Rock/: CMakeLists.txt  RockDialect.cpp  RockOps.cpp
orchestra-compiler/lib/Orchestra/Transforms/: CMakeLists.txt  LowerLinalgToRock.cpp  LowerOrchestraToGPU.cpp  LowerOrchestraToROCDL.cpp  LowerOrchestraToStandard.cpp  LowerOrchestraToXeGPU.cpp  LowerRockToAMDGPU.cpp  LowerRockToGPU.cpp  Passes.cpp  README.md  SpeculateIfOp.cpp  SpeculateIfOp.pdll
orchestra-compiler/lib/OrchestraPasses/: CMakeLists.txt  DivergenceToSpeculation.cpp  DummyPass.cpp  DummyPass.h  OrchestraPasses.cpp  OrchestraPasses.h  README.md
orchestra-compiler/orchestra-opt/: CMakeLists.txt  README.md  main.cpp
orchestra-compiler/tests/: .lit_test_times.txt  CMakeLists.txt  README.md  barrier.mlir  canonicalize-commit.mlir  canonicalize-transfer.mlir  commit.mlir  fusion-test.mlir  invalid_schedule.mlir  invalid_task.mlir  invalid_task_arch.mlir  invalid_task_arch_empty.mlir  invalid_task_arch_missing.mlir  invalid_task_arch_not_string.mlir  invalid_task_device_id_not_integer.mlir  invalid_task_no_arch.mlir  invalid_task_no_device_id.mlir  invalid_task_target_not_dict.mlir  lit.cfg.py.in  lower-commit.mlir  lower-linalg-to-rock.mlir  lower-rock-to-amdgpu.mlir  lower-rock-to-gpu.mlir  lower-transfer-roc.mlir  lower-transfer-tma.mlir  lower-transfer-xegpu.mlir  lower-transfer-xegpu.mlir.disabled  lower-transfer.mlir  schedule.mlir  select.mlir  speculate.mlir  test.mlir  transform-tile.mlir  verify-commit.mlir  verify-select.mlir  verify-transfer.mlir
orchestra-compiler/tools/: CMakeLists.txt
orchestra-compiler/tools/orchestra-opt/: CMakeLists.txt  main.cpp  orchestra-opt.cpp
orchestra-compiler/transforms/: README.md
plan/: A Comprehensive Guide to Integrating System-Installed MLIR with CMake .md  basics_read_first.md  orchestra - PRIO - tech - CMake MLIR TableGen Header Issue.md  orchestra - tech - PRIO - CMake MLIR TableGen header inclusion.md  orechestra - PRIO - tech - TableGen Op Generic Type Definition.md  step1.md
research/: linker-symbol-elision-research.md
scripts/: README.md  run-clang-format.py
tests/: .lit_test_times.txt  invalid_schedule.mlir  invalid_task.mlir  lit.cfg.py  run.py  test.mlir
(+24 files in other folders)
